--- a/index.html
+++ b/index.html
@@ -145,9 +145,13 @@
                 </div>
             </div>
 
-            <button class="btn-primary">Download CV</button>
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
 
         </section>
+
+
 
         
 
